--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,5 +21,9 @@ services:
     volumes:
       - ./config/keycloak/import:/opt/keycloak/data/import
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB: "postgres"
+      KC_DB_URL: "jdbc:postgresql://db:5432/person"
+      KC_DB_USERNAME: "postgres"
+      KC_DB_PASSWORD: "password"
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
