--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     command:
       - start-dev
       - --import-realm
+      - --log-level=debug
     ports:
       - 8082:8080
     volumes:
