--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,8 @@ services:
     command:
       - start-dev
       - --import-realm
-      - --log-level=debug
     ports:
-      - 8082:8080
+      - "9005:8080"
     volumes:
       - ./config/keycloak/import:/opt/keycloak/data/import
     environment:
@@ -28,5 +27,4 @@ services:
       KC_DB_PASSWORD: "password"
       KEYCLOAK_ADMIN: "admin"
       KEYCLOAK_ADMIN_PASSWORD: "admin"
-    depends_on:
-      - db
+      KC_FEATURES: token-exchange,admin-fine-grained-authz
