--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,26 +1,24 @@
 server:
-  port: 8088
+  port: 8080
 spring:
   application:
     name: individuals-api
   security:
     oauth2:
-      client:
-        registration:
-          keycloak:
-            client-id: merchantsclient
-            client-secret: aQe2UelkaeGNnAUA8JV7p8Lnhdw03wqm
-            provider: keycloak
-            scope: openid, profile, email, roles, microprofile-jwt
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8082/realms/merchantsrealm
-            user-name-attribute: preferred_username
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/${keycloak.realm}
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+jwt:
+  auth:
+    converter:
+      principal-attribute: preferred_username
+      resource-id: ${keycloak.clientId}
 keycloak:
-  server-url: http://localhost:8082
-  realm: merchantsrealm
-  username: admin
-  password: admin
-logging:
-  level:
-    root: debug
+  realm: appauth
+  domain: localhost:9005
+  clientId: app-auth-client-id
+  clientSecret: bFWi1Tzwf1Tke4S4t1n6WColnNNmz2Kd
+  urls:
+    auth: http://${keycloak.domain}
+url-frontend-guest: http://localhost
