--- a/build.gradle
+++ b/build.gradle
@@ -22,23 +22,23 @@ repositories {
 }
 
 dependencies {
+    //spring
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-    implementation 'org.keycloak:keycloak-admin-client:24.0.4'
-    implementation 'io.projectreactor:reactor-core'
-
-
-
-
-
-    implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'io.projectreactor:reactor-core'
+
+    //keycloak
+    implementation "org.keycloak:keycloak-admin-client:${keycloakAdminClientVersin}"
+
+    //dev
+    implementation 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor "org.projectlombok:lombok"
 
-
+    //test
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'io.projectreactor:reactor-test'
@@ -47,8 +47,9 @@ dependencies {
     testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.testcontainers:r2dbc'
     testImplementation 'io.rest-assured:rest-assured'
-    testImplementation 'com.github.dasniko:testcontainers-keycloak:2.1.2'
-    //macos
+    testImplementation 'com.github.dasniko:testcontainers-keycloak:3.3.1'
+
+    //if dns resolving not working by default for mac os
     //implementation 'io.projectreactor.netty:reactor-netty-http:1.0.39'
     //implementation 'io.projectreactor.netty:reactor-netty-core:1.0.39'
     // For macOS with Apple Silicon (M1)
