--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,11 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.testcontainers:testcontainers:1.19.7'
     testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
-    testImplementation 'org.testcontainers:r2dbc'
+  //  testImplementation 'org.testcontainers:postgresql'
+   // testImplementation 'org.testcontainers:r2dbc'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'com.github.dasniko:testcontainers-keycloak:3.3.1'
+    testImplementation 'com.h2database:h2:2.2.224'
 
     //if dns resolving not working by default for mac os
     //implementation 'io.projectreactor.netty:reactor-netty-http:1.0.39'
