--- a/build.gradle
+++ b/build.gradle
@@ -44,17 +44,16 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.testcontainers:testcontainers:1.19.7'
     testImplementation 'org.testcontainers:junit-jupiter'
-  //  testImplementation 'org.testcontainers:postgresql'
-   // testImplementation 'org.testcontainers:r2dbc'
+    testImplementation 'org.testcontainers:postgresql'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'com.github.dasniko:testcontainers-keycloak:3.3.1'
-    testImplementation 'com.h2database:h2:2.2.224'
+
 
     //if dns resolving not working by default for mac os
-   // implementation 'io.projectreactor.netty:reactor-netty-http:1.0.39'
-   // implementation 'io.projectreactor.netty:reactor-netty-core:1.0.39'
+   //testImplementation 'io.projectreactor.netty:reactor-netty-http:1.0.39'
+   //testImplementation 'io.projectreactor.netty:reactor-netty-core:1.0.39'
     // For macOS with Apple Silicon (M1)
-    // runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.77.Final:osx-aarch_64'
+    //runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.77.Final:osx-aarch_64'
 }
 
 tasks.named('test') {
