--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -31,3 +31,8 @@ spring:
   config:
     activate:
       on-profile: test
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
